Add helper function for adding reactions & refactor first paginate() method